2005-12-29  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric.

        - finished frame traversal cleanup
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6293
        
        * kwq/WebCoreBridge.h: Removed childFrames method from WebCoreBridge protocol
	since it is not actually used.

2005-12-29  Eric Seidel  <eseidel@apple.com>

        File accidentally omitted from previous commit.

        Remove QDict from khtml/html
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6230

        * khtml/ecma/kjs_html.cpp:
        (KJS::KJS::HTMLCollection::getNamedItems):

2005-12-29  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        Remove QDict from khtml/html
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6230
        Uses HashMap instead.

        * khtml/html/html_miscimpl.cpp:
        (DOM::HTMLCollectionImpl::CollectionInfo::CollectionInfo):
        (DOM::HTMLCollectionImpl::CollectionInfo::reset):
        (DOM::HTMLCollectionImpl::namedItem):
        (DOM::HTMLCollectionImpl::updateNameCache):
        (DOM::HTMLCollectionImpl::namedItems):
        (DOM::HTMLCollectionImpl::nextNamedItem):
        (DOM::HTMLFormCollectionImpl::nextNamedItemInternal):
        (DOM::HTMLFormCollectionImpl::updateNameCache):
        * khtml/html/html_miscimpl.h:

2005-12-29  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        DOMString/DOMStringImpl/AtomicString need enhancements before replacing QString
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6228
        Added find(), contains(), startsWith() and endsWith() to DOMString
        Uses the above functions throughout the code.
        Small performance boost.

        * khtml/css/css_base.cpp:
        (CSSSelector::print):
        * khtml/css/css_ruleimpl.cpp:
        (DOM::CSSImportRuleImpl::init):
        * khtml/css/css_valueimpl.cpp:
        (DOM::CSSStyleDeclarationImpl::setProperty):
        * khtml/css/cssparser.cpp:
        (CSSParser::parseValue):