@@ -257,7 +257,7 @@ static xsltStylesheetPtr xsltStylesheetPointer(RefPtr<XSLStyleSheetImpl> &cached
     return cachedStylesheet->compileStyleSheet();
 }
 
-static inline xmlDocPtr xmlDocPtrFromNode(NodeImpl *sourceNode)
+static inline xmlDocPtr xmlDocPtrFromNode(NodeImpl *sourceNode, bool &shouldDelete)
 {
     RefPtr<DocumentImpl> ownerDocument = sourceNode->getDocument();
     bool sourceIsDocument = (sourceNode == ownerDocument.get());
@@ -265,8 +265,10 @@ static inline xmlDocPtr xmlDocPtrFromNode(NodeImpl *sourceNode)
     xmlDocPtr sourceDoc = 0;
     if (sourceIsDocument)
         sourceDoc = (xmlDocPtr)ownerDocument->transformSource();
-    if (!sourceDoc)
+    if (!sourceDoc) {
         sourceDoc = (xmlDocPtr)xmlDocPtrForString(createMarkup(sourceNode), sourceIsDocument ? ownerDocument->URL() : QString());
+        shouldDelete = (sourceDoc != 0);
+    }
     return sourceDoc;
 }
 
@@ -302,23 +304,26 @@ bool XSLTProcessorImpl::transformToString(NodeImpl *sourceNode, QString &mimeTyp
     }
     cachedStylesheet->clearDocuments();
     
-    xmlDocPtr sourceDoc = xmlDocPtrFromNode(sourceNode);
-    const char **params = xsltParamArrayFromParameterMap(m_parameters);
-    xmlDocPtr resultDoc = xsltApplyStylesheet(sheet, sourceDoc, params);
-    freeXsltParamArray(params);
+    bool success = false;
+    bool shouldFreeSourceDoc = false;
+    if (xmlDocPtr sourceDoc = xmlDocPtrFromNode(sourceNode, shouldFreeSourceDoc)) {
+        const char **params = xsltParamArrayFromParameterMap(m_parameters);
+        xmlDocPtr resultDoc = xsltApplyStylesheet(sheet, sourceDoc, params);
+        freeXsltParamArray(params);
+        if (shouldFreeSourceDoc)
+            xmlFreeDoc(sourceDoc);
+        
+        if (success = saveResultToString(resultDoc, sheet, resultString)) {
+            mimeType = resultMIMEType(resultDoc, sheet);
+            resultEncoding = (char *)resultDoc->encoding;
+        }
+        xmlFreeDoc(resultDoc);
+    }
     
     setXSLTLoadCallBack(0, 0, 0);
-    
-    if (!saveResultToString(resultDoc, sheet, resultString))
-        return false;
-    
-    mimeType = resultMIMEType(resultDoc, sheet);
-    resultEncoding = (char *)resultDoc->encoding;
-    
     xsltFreeStylesheet(sheet);
-    xmlFreeDoc(resultDoc);
-    
-    return true;
+
+    return success;
 }
 
 RefPtr<DocumentImpl> XSLTProcessorImpl::transformToDocument(NodeImpl *sourceNode)
